# marksmith

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
marksmith/: __init__.py  __main__.py  cli.py  confluence.py  convert.py  template.py
tests/: test_convert.py  test_template.py
